Using get_loss().

--- a/lectures/makemore/makemore_part1_bigrams.ipynb
+++ b/lectures/makemore/makemore_part1_bigrams.ipynb
@@ -95,6 +95,18 @@
     "    probs = get_probs_layer(probs, W1)\n",
     "  return probs\n",
     "\n",
+    "def predict(xs, W, W1):\n",
+    "    if len(xs[0].shape) > 0:\n",
+    "      xenc = torch.cat((F.one_hot(xs[:, 0], num_classes=27).float(),\n",
+    "                        F.one_hot(xs[:, 1], num_classes=27).float()), dim=1)\n",
+    "    else:\n",
+    "      xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding\n",
+    "    probs = get_probs(xenc, W, W1)  \n",
+    "    return probs\n",
+    "\n",
+    "def get_loss(probs, ys, num):\n",
+    "  return -probs[torch.arange(num), ys].log().mean()\n",
+    "\n",
     "def gradient_descent(xs, ys, num):\n",
     "  # initialize the 'network'\n",
     "  g = torch.Generator().manual_seed(2147483647)\n",
@@ -107,14 +119,8 @@
     "\n",
     "  for k in range(100):\n",
     "    # forward pass\n",
-    "    if len(xs[0].shape) > 0:\n",
-    "      xenc = torch.cat((F.one_hot(xs[:, 0], num_classes=27).float(),\n",
-    "                        F.one_hot(xs[:, 1], num_classes=27).float()), dim=1)\n",
-    "    else:\n",
-    "      xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding\n",
-    "\n",
-    "    probs = get_probs(xenc, W, W1)  \n",
-    "    loss = -probs[torch.arange(num), ys].log().mean() + 0.01*(W**2).mean()\n",
+    "    probs = predict(xs, W, W1)\n",
+    "    loss = get_loss(probs, ys, num) + 0.01*(W**2).mean()\n",
     "    print(loss.item())\n",
     "    \n",
     "    # backward pass\n",
@@ -2153,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
