Printing traininig progress with tqdm.

--- a/lectures/makemore/makemore_part1_bigrams.ipynb
+++ b/lectures/makemore/makemore_part1_bigrams.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import torch.nn.functional as F\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from tqdm import tqdm\n",
     "%matplotlib inline"
    ]
   },
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,11 +118,12 @@
     "    W = torch.randn((27, 27), generator=g, requires_grad=True)\n",
     "    W1 = None\n",
     "\n",
-    "  for k in range(100):\n",
+    "  pbar = tqdm(range(100))\n",
+    "  for k in pbar:\n",
     "    # forward pass\n",
     "    probs = predict(xs, W, W1)\n",
     "    loss = get_loss(probs, ys, num) + 0.01*(W**2).mean()\n",
-    "    print(loss.item())\n",
+    "    pbar.set_postfix({'loss': f'{loss.item():.4f}'})\n",
     "    \n",
     "    # backward pass\n",
     "    W.grad = None # set to zero the gradient\n",
@@ -909,33 +911,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "chars = sorted(list(set(''.join(words))))\n",
-    "stoi = {s:i+1 for i,s in enumerate(chars)}\n",
-    "stoi['.'] = 0\n",
-    "itos = {i:s for s,i in stoi.items()}"
+    "stoi_train = {s:i+1 for i,s in enumerate(chars)}\n",
+    "stoi_train['.'] = 0\n",
+    "itos_train = {i:s for s,i in stoi_train.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for w in words:\n",
     "  chs = ['.'] + list(w) + ['.']\n",
     "  for ch1, ch2 in zip(chs, chs[1:]):\n",
-    "    ix1 = stoi[ch1]\n",
-    "    ix2 = stoi[ch2]\n",
+    "    ix1 = stoi_train[ch1]\n",
+    "    ix2 = stoi_train[ch2]\n",
     "    N[ix1, ix2] += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +956,7 @@
     "plt.imshow(N, cmap='Blues')\n",
     "for i in range(27):\n",
     "    for j in range(27):\n",
-    "        chstr = itos[i] + itos[j]\n",
+    "        chstr = itos_train[i] + itos_train[j]\n",
     "        plt.text(j, i, chstr, ha=\"center\", va=\"bottom\", color='gray')\n",
     "        plt.text(j, i, N[i, j].item(), ha=\"center\", va=\"top\", color='gray')\n",
     "plt.axis('off');"
@@ -1008,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1027,7 @@
    "source": [
     "g = torch.Generator().manual_seed(2147483647)\n",
     "ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
-    "itos[ix]"
+    "itos_train[ix]"
    ]
   },
   {
@@ -1087,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1114,7 @@
     "  while True:\n",
     "    p = P[ix]\n",
     "    ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
-    "    out.append(itos[ix])\n",
+    "    out.append(itos_train[ix])\n",
     "    if ix == 0:\n",
     "      break\n",
     "  print(''.join(out))"
@@ -1134,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1155,8 +1157,8 @@
     "#for w in [\"andrejq\"]:\n",
     "  chs = ['.'] + list(w) + ['.']\n",
     "  for ch1, ch2 in zip(chs, chs[1:]):\n",
-    "    ix1 = stoi[ch1]\n",
-    "    ix2 = stoi[ch2]\n",
+    "    ix1 = stoi_train[ch1]\n",
+    "    ix2 = stoi_train[ch2]\n",
     "    prob = P[ix1, ix2]\n",
     "    logprob = torch.log(prob)\n",
     "    log_likelihood += logprob\n",
@@ -1171,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1193,8 +1195,8 @@
     "for w in words[:1]:\n",
     "  chs = ['.'] + list(w) + ['.']\n",
     "  for ch1, ch2 in zip(chs, chs[1:]):\n",
-    "    ix1 = stoi[ch1]\n",
-    "    ix2 = stoi[ch2]\n",
+    "    ix1 = stoi_train[ch1]\n",
+    "    ix2 = stoi_train[ch2]\n",
     "    print(ch1, ch2)\n",
     "    xs.append(ix1)\n",
     "    ys.append(ix2)\n",
@@ -1559,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1630,7 @@
     "  x = xs[i].item() # input character index\n",
     "  y = ys[i].item() # label character index\n",
     "  print('--------')\n",
-    "  print(f'bigram example {i+1}: {itos[x]}{itos[y]} (indexes {x},{y})')\n",
+    "  print(f'bigram example {i+1}: {itos_train[x]}{itos_train[y]} (indexes {x},{y})')\n",
     "  print('input to the neural net:', x)\n",
     "  print('output probabilities from the neural net:', probs[i])\n",
     "  print('label (actual next character):', y)\n",
@@ -1756,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1771,7 @@
    ],
    "source": [
     "words = open('names.txt', 'r').read().splitlines()\n",
-    "xs, ys, stoi, itos, num = get_dataset_and_network_bigrams(words)"
+    "xs, ys, stoi_train, itos_train, num = get_dataset_and_network_bigrams(words)"
    ]
   },
   {
@@ -1909,7 +1911,7 @@
     }
    ],
    "source": [
-    "xs_trigram, ys_trigram, stoi, itos, num = get_dataset_and_network_trigrams(words)"
+    "xs_trigram, ys_trigram, stoi_train, itos_train, num = get_dataset_and_network_trigrams(words)"
    ]
   },
   {
@@ -1954,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1993,7 @@
     "    # ----------\n",
     "    \n",
     "    ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
-    "    out.append(itos[ix])\n",
+    "    out.append(itos_train[ix])\n",
     "    if ix == 0:\n",
     "      break\n",
     "  print(''.join(out))"
@@ -2025,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2034,9 +2036,9 @@
     "for w in words:\n",
     "  chs = ['.'] + list(w) + ['.']\n",
     "  for ch1, ch2, ch3, in zip(chs, chs[1:], chs[2:]):\n",
-    "    ix1 = stoi[ch1]\n",
-    "    ix2 = stoi[ch2]\n",
-    "    ix3 = stoi[ch3]\n",
+    "    ix1 = stoi_train[ch1]\n",
+    "    ix2 = stoi_train[ch2]\n",
+    "    ix3 = stoi_train[ch3]\n",
     "    N[ix1, ix2, ix3] += 1"
    ]
   },
@@ -2096,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2117,9 +2119,9 @@
     "#for w in [\"andrejq\"]:\n",
     "  chs = ['.'] + list(w) + ['.']\n",
     "  for ch1, ch2, ch3 in zip(chs, chs[1:], chs[2:]):\n",
-    "    ix1 = stoi[ch1]\n",
-    "    ix2 = stoi[ch2]\n",
-    "    ix3 = stoi[ch3]\n",
+    "    ix1 = stoi_train[ch1]\n",
+    "    ix2 = stoi_train[ch2]\n",
+    "    ix3 = stoi_train[ch3]\n",
     "    prob = P[ix1, ix2, ix3]\n",
     "    logprob = torch.log(prob)\n",
     "    log_likelihood += logprob\n",
@@ -2159,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2168,206 +2170,18 @@
      "text": [
       "number of examples:  182594\n",
       "number of examples:  156985\n",
-      "3.7683823108673096\n",
-      "3.3796560764312744\n",
-      "3.162184476852417\n",
-      "3.0284576416015625\n",
-      "2.9358978271484375\n",
-      "2.8687052726745605\n",
-      "2.8181331157684326\n",
-      "2.778609037399292\n",
-      "2.7467024326324463\n",
-      "2.7202749252319336\n",
-      "2.6979541778564453\n",
-      "2.678831100463867\n",
-      "2.662275791168213\n",
-      "2.6478312015533447\n",
-      "2.6351499557495117\n",
-      "2.6239569187164307\n",
-      "2.6140270233154297\n",
-      "2.6051766872406006\n",
-      "2.597250461578369\n",
-      "2.590120553970337\n",
-      "2.583678722381592\n",
-      "2.5778346061706543\n",
-      "2.5725131034851074\n",
-      "2.5676493644714355\n",
-      "2.563187837600708\n",
-      "2.5590829849243164\n",
-      "2.555295467376709\n",
-      "2.551790952682495\n",
-      "2.5485403537750244\n",
-      "2.5455188751220703\n",
-      "2.5427041053771973\n",
-      "2.5400781631469727\n",
-      "2.537623167037964\n",
-      "2.535324811935425\n",
-      "2.533170223236084\n",
-      "2.531146764755249\n",
-      "2.529244899749756\n",
-      "2.5274546146392822\n",
-      "2.5257668495178223\n",
-      "2.524174690246582\n",
-      "2.522670269012451\n",
-      "2.521247386932373\n",
-      "2.519899845123291\n",
-      "2.518622636795044\n",
-      "2.51741099357605\n",
-      "2.5162596702575684\n",
-      "2.515165328979492\n",
-      "2.5141236782073975\n",
-      "2.5131313800811768\n",
-      "2.5121850967407227\n",
-      "2.511281967163086\n",
-      "2.510420322418213\n",
-      "2.5095956325531006\n",
-      "2.508807420730591\n",
-      "2.508052110671997\n",
-      "2.507328987121582\n",
-      "2.5066354274749756\n",
-      "2.5059702396392822\n",
-      "2.50533127784729\n",
-      "2.5047173500061035\n",
-      "2.504127264022827\n",
-      "2.5035595893859863\n",
-      "2.5030131340026855\n",
-      "2.5024867057800293\n",
-      "2.5019795894622803\n",
-      "2.501490592956543\n",
-      "2.501018762588501\n",
-      "2.500563144683838\n",
-      "2.5001232624053955\n",
-      "2.4996986389160156\n",
-      "2.4992880821228027\n",
-      "2.4988908767700195\n",
-      "2.498506784439087\n",
-      "2.4981348514556885\n",
-      "2.497775077819824\n",
-      "2.4974262714385986\n",
-      "2.4970884323120117\n",
-      "2.496760845184326\n",
-      "2.496443748474121\n",
-      "2.496135711669922\n",
-      "2.4958372116088867\n",
-      "2.495547294616699\n",
-      "2.4952659606933594\n",
-      "2.49499249458313\n",
-      "2.4947268962860107\n",
-      "2.494469165802002\n",
-      "2.494218349456787\n",
-      "2.4939746856689453\n",
-      "2.4937376976013184\n",
-      "2.4935073852539062\n",
-      "2.4932830333709717\n",
-      "2.493065118789673\n",
-      "2.4928531646728516\n",
-      "2.4926459789276123\n",
-      "2.4924447536468506\n",
-      "2.492249011993408\n",
-      "2.492058038711548\n",
-      "2.4918723106384277\n",
-      "2.4916911125183105\n",
-      "2.491514205932617\n",
-      "3.4808504581451416\n",
-      "3.4300696849823\n",
-      "3.4028029441833496\n",
-      "3.381333351135254\n",
-      "3.3625831604003906\n",
-      "3.3453643321990967\n",
-      "3.329519748687744\n",
-      "3.3154075145721436\n",
-      "3.3031651973724365\n",
-      "3.292402982711792\n",
-      "3.282585620880127\n",
-      "3.273322105407715\n",
-      "3.264385461807251\n",
-      "3.255669355392456\n",
-      "3.2471566200256348\n",
-      "3.2389023303985596\n",
-      "3.231004476547241\n",
-      "3.2235524654388428\n",
-      "3.2165777683258057\n",
-      "3.210054397583008\n",
-      "3.20391845703125\n",
-      "3.198099136352539\n",
-      "3.192523956298828\n",
-      "3.187126636505127\n",
-      "3.181853771209717\n",
-      "3.176677703857422\n",
-      "3.171626091003418\n",
-      "3.166809320449829\n",
-      "3.162383556365967\n",
-      "3.1584267616271973\n",
-      "3.1548831462860107\n",
-      "3.1516430377960205\n",
-      "3.148616313934326\n",
-      "3.145737409591675\n",
-      "3.1429555416107178\n",
-      "3.140225887298584\n",
-      "3.1375014781951904\n",
-      "3.134730577468872\n",
-      "3.1318514347076416\n",
-      "3.1287946701049805\n",
-      "3.125500202178955\n",
-      "3.121955633163452\n",
-      "3.1182539463043213\n",
-      "3.114600419998169\n",
-      "3.111205816268921\n",
-      "3.1081736087799072\n",
-      "3.1054961681365967\n",
-      "3.103120803833008\n",
-      "3.100985050201416\n",
-      "3.099026918411255\n",
-      "3.097194194793701\n",
-      "3.095445156097412\n",
-      "3.0937516689300537\n",
-      "3.0920982360839844\n",
-      "3.090475559234619\n",
-      "3.088881015777588\n",
-      "3.0873184204101562\n",
-      "3.0857934951782227\n",
-      "3.084315061569214\n",
-      "3.0828909873962402\n",
-      "3.0815277099609375\n",
-      "3.0802268981933594\n",
-      "3.078989028930664\n",
-      "3.0778098106384277\n",
-      "3.0766849517822266\n",
-      "3.075608968734741\n",
-      "3.074577808380127\n",
-      "3.07358717918396\n",
-      "3.0726330280303955\n",
-      "3.07171368598938\n",
-      "3.070824384689331\n",
-      "3.069965124130249\n",
-      "3.069132089614868\n",
-      "3.068324327468872\n",
-      "3.067540168762207\n",
-      "3.066776752471924\n",
-      "3.0660336017608643\n",
-      "3.0653090476989746\n",
-      "3.0646018981933594\n",
-      "3.063910722732544\n",
-      "3.0632340908050537\n",
-      "3.0625717639923096\n",
-      "3.061922311782837\n",
-      "3.0612850189208984\n",
-      "3.060659170150757\n",
-      "3.060044288635254\n",
-      "3.0594401359558105\n",
-      "3.0588459968566895\n",
-      "3.0582613945007324\n",
-      "3.0576860904693604\n",
-      "3.057119846343994\n",
-      "3.056563138961792\n",
-      "3.0560150146484375\n",
-      "3.055476188659668\n",
-      "3.054945945739746\n",
-      "3.05442476272583\n",
-      "3.05391263961792\n",
-      "3.053410291671753\n",
-      "3.0529160499572754\n",
-      "3.052431583404541\n"
+      "number of examples:  41046\n",
+      "number of examples:  35257\n",
+      "number of examples:  4506\n",
+      "number of examples:  3871\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:06<00:00, 15.86it/s, loss=2.4915]\n",
+      "100%|██████████| 100/100 [00:10<00:00,  9.51it/s, loss=3.0524]\n"
      ]
     }
    ],
@@ -2384,31 +2198,64 @@
     "        words_dev.append(word)\n",
     "    else:\n",
     "        words_test.append(word)\n",
-    "xs_b, ys_b, stoi, itos, num_b = get_dataset_and_network_bigrams(words_train)\n",
-    "xs_t, ys_t, stoi, itos, num_t = get_dataset_and_network_trigrams(words_train)\n",
-    "W_b, W_1_b, loss_b = gradient_descent(xs_b, ys_b, num_b)  # loss in bigram = 2.49\n",
-    "W_t, W_1_t, loss_t = gradient_descent(xs_t, ys_t, num_t)  # loss in trigram = 3.05"
+    "\n",
+    "# Create datasets\n",
+    "xs_train_b, ys_train_b, stoi_train, itos_train, num_train_b = get_dataset_and_network_bigrams(words_train)\n",
+    "xs_train_t, ys_train_t, stoi_train, itos_train, num_train_t = get_dataset_and_network_trigrams(words_train)\n",
+    "\n",
+    "xs_dev_b, ys_dev_b, stoi_dev, itos_dev, num_dev_b = get_dataset_and_network_bigrams(words_dev)\n",
+    "xs_dev_t, ys_dev_t, stoi_dev, itos_dev, num_dev_t = get_dataset_and_network_trigrams(words_dev)\n",
+    "\n",
+    "xs_test_b, ys_test_b, stoi_test, itos_test, num_test_b = get_dataset_and_network_bigrams(words_test)\n",
+    "xs_test_t, ys_test_t, stoi_test, itos_test, num_test_t = get_dataset_and_network_trigrams(words_test)\n",
+    "\n",
+    "# Train\n",
+    "W_b, W_1_b, loss_train_b = gradient_descent(xs_train_b, ys_train_b, num_train_b)  # loss in bigram = 2.49\n",
+    "W_t, W_1_t, loss_train_t = gradient_descent(xs_train_t, ys_train_t, num_train_t)  # loss in trigram = 3.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ys_train_pred_b = predict(xs_train_b, W_b, None)\n",
+    "ys_dev_pred_b = predict(xs_dev_b, W_b, None)\n",
+    "ys_test_pred_b = predict(xs_test_b, W_b, None)\n",
+    "\n",
+    "ys_train_pred_t = predict(xs_train_t, W_t, W_1_t)\n",
+    "ys_dev_pred_t = predict(xs_dev_t, W_t, W_1_t)\n",
+    "ys_test_pred_t = predict(xs_test_t, W_t, W_1_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor(2.4915, grad_fn=<AddBackward0>),\n",
-       " tensor(3.0524, grad_fn=<AddBackward0>))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss bigram train: 2.476\n",
+      "Loss bigram dev: 2.471\n",
+      "Loss bigram test: 2.461\n",
+      "\n",
+      "Loss trigram train: 3.041\n",
+      "Loss trigram dev: 3.038\n",
+      "Loss trigram test: 3.027\n"
+     ]
     }
    ],
    "source": [
-    "loss_b, loss_t"
+    "print(f'Loss bigram train: {get_loss(ys_train_pred_b, ys_train_b, num_train_b):.3f}')\n",
+    "print(f'Loss bigram dev: {get_loss(ys_dev_pred_b, ys_dev_b, num_dev_b):.3f}')\n",
+    "print(f'Loss bigram test: {get_loss(ys_test_pred_b, ys_test_b, num_test_b):.3f}')\n",
+    "\n",
+    "print(f'\\nLoss trigram train: {get_loss(ys_train_pred_t, ys_train_t, num_train_t):.3f}')\n",
+    "print(f'Loss trigram dev: {get_loss(ys_dev_pred_t, ys_dev_t, num_dev_t):.3f}')\n",
+    "print(f'Loss trigram test: {get_loss(ys_test_pred_t, ys_test_t, num_test_t):.3f}')"
    ]
   }
  ],
