--- a/lectures/makemore/makemore_part1_bigrams.ipynb
+++ b/lectures/makemore/makemore_part1_bigrams.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
+    "import json\n",
     "%matplotlib inline"
    ]
   },
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
     "def get_loss(probs, ys, num):\n",
     "  return -probs[torch.arange(num), ys].log().mean()\n",
     "\n",
-    "def gradient_descent(xs, ys, num):\n",
+    "def gradient_descent(xs, ys, num, reg=0.01):\n",
     "  # initialize the 'network'\n",
     "  g = torch.Generator().manual_seed(2147483647)\n",
     "  if len(xs[0].shape) > 0:\n",
@@ -118,12 +119,12 @@
     "    W = torch.randn((27, 27), generator=g, requires_grad=True)\n",
     "    W1 = None\n",
     "\n",
-    "  pbar = tqdm(range(100))\n",
+    "  pbar = tqdm(range(100), desc='loss')\n",
     "  for k in pbar:\n",
     "    # forward pass\n",
     "    probs = predict(xs, W, W1)\n",
-    "    loss = get_loss(probs, ys, num) + 0.01*(W**2).mean()\n",
-    "    pbar.set_postfix({'loss': f'{loss.item():.4f}'})\n",
+    "    loss = get_loss(probs, ys, num) + reg*(W**2).mean()\n",
+    "    pbar.set_postfix({'epoch': k, 'loss': f'{loss.item():.4f}'})\n",
     "    \n",
     "    # backward pass\n",
     "    W.grad = None # set to zero the gradient\n",
@@ -2156,12 +2157,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### E02"
+    "##### E02, E03"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2180,8 +2181,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:06<00:00, 15.86it/s, loss=2.4915]\n",
-      "100%|██████████| 100/100 [00:10<00:00,  9.51it/s, loss=3.0524]\n"
+      "Regularization:   0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training bigram.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loss: 100%|██████████| 100/100 [00:06<00:00, 14.82it/s, epoch=99, loss=2.4915]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training trigram.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loss: 100%|██████████| 100/100 [00:11<00:00,  8.77it/s, epoch=99, loss=3.0524]\n",
+      "Regularization: 100%|██████████| 1/1 [00:18<00:00, 18.25s/it]\n"
      ]
     }
    ],
@@ -2210,52 +2239,36 @@
     "xs_test_t, ys_test_t, stoi_test, itos_test, num_test_t = get_dataset_and_network_trigrams(words_test)\n",
     "\n",
     "# Train\n",
-    "W_b, W_1_b, loss_train_b = gradient_descent(xs_train_b, ys_train_b, num_train_b)  # loss in bigram = 2.49\n",
-    "W_t, W_1_t, loss_train_t = gradient_descent(xs_train_t, ys_train_t, num_train_t)  # loss in trigram = 3.05"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ys_train_pred_b = predict(xs_train_b, W_b, None)\n",
-    "ys_dev_pred_b = predict(xs_dev_b, W_b, None)\n",
-    "ys_test_pred_b = predict(xs_test_b, W_b, None)\n",
+    "loss = {'bigram': {'train': {}, 'dev': {}, 'test': {}}, \n",
+    "        'trigram': {'train': {}, 'dev': {}, 'test': {}}}\n",
+    "pbar = tqdm(np.arange(0.01, 1, 0.05), desc='Regularization')\n",
+    "for reg in pbar:\n",
+    "    print('Training bigram.')\n",
+    "    W_b, W_1_b, loss_train_b = gradient_descent(xs_train_b, ys_train_b, num_train_b, reg=reg)\n",
+    "    print('Training trigram.')\n",
+    "    W_t, W_1_t, loss_train_t = gradient_descent(xs_train_t, ys_train_t, num_train_t, reg=reg)\n",
+    "    ys_train_pred_b = predict(xs_train_b, W_b, None)\n",
+    "    ys_dev_pred_b = predict(xs_dev_b, W_b, None)\n",
+    "    ys_test_pred_b = predict(xs_test_b, W_b, None)\n",
     "\n",
-    "ys_train_pred_t = predict(xs_train_t, W_t, W_1_t)\n",
-    "ys_dev_pred_t = predict(xs_dev_t, W_t, W_1_t)\n",
-    "ys_test_pred_t = predict(xs_test_t, W_t, W_1_t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss bigram train: 2.476\n",
-      "Loss bigram dev: 2.471\n",
-      "Loss bigram test: 2.461\n",
-      "\n",
-      "Loss trigram train: 3.041\n",
-      "Loss trigram dev: 3.038\n",
-      "Loss trigram test: 3.027\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'Loss bigram train: {get_loss(ys_train_pred_b, ys_train_b, num_train_b):.3f}')\n",
-    "print(f'Loss bigram dev: {get_loss(ys_dev_pred_b, ys_dev_b, num_dev_b):.3f}')\n",
-    "print(f'Loss bigram test: {get_loss(ys_test_pred_b, ys_test_b, num_test_b):.3f}')\n",
+    "    ys_train_pred_t = predict(xs_train_t, W_t, W_1_t)\n",
+    "    ys_dev_pred_t = predict(xs_dev_t, W_t, W_1_t)\n",
+    "    ys_test_pred_t = predict(xs_test_t, W_t, W_1_t)\n",
+    "    loss_train_b = get_loss(ys_train_pred_b, ys_train_b, num_train_b)\n",
+    "    loss_train_t = get_loss(ys_train_pred_t, ys_train_t, num_train_t)\n",
+    "    loss_dev_b = get_loss(ys_dev_pred_b, ys_dev_b, num_dev_b)\n",
+    "    loss_dev_t = get_loss(ys_dev_pred_t, ys_dev_t, num_dev_t)\n",
+    "    loss_test_b = get_loss(ys_test_pred_b, ys_test_b, num_test_b)\n",
+    "    loss_test_t = get_loss(ys_test_pred_t, ys_test_t, num_test_t)\n",
+    "    loss['bigram']['train'][float(reg)] = loss_train_b.item()\n",
+    "    loss['bigram']['dev'][float(reg)] = loss_dev_b.item()\n",
+    "    loss['bigram']['test'][float(reg)] = loss_test_b.item()\n",
+    "    loss['trigram']['train'][float(reg)] = loss_train_t.item()\n",
+    "    loss['trigram']['dev'][float(reg)] = loss_dev_t.item()\n",
+    "    loss['trigram']['test'][float(reg)] = loss_test_t.item()\n",
     "\n",
-    "print(f'\\nLoss trigram train: {get_loss(ys_train_pred_t, ys_train_t, num_train_t):.3f}')\n",
-    "print(f'Loss trigram dev: {get_loss(ys_dev_pred_t, ys_dev_t, num_dev_t):.3f}')\n",
-    "print(f'Loss trigram test: {get_loss(ys_test_pred_t, ys_test_t, num_test_t):.3f}')"
+    "with open('losses.json', 'w') as f:\n",
+    "    json.dump(loss, f, indent=2)"
    ]
   }
  ],
