--- a/lectures/makemore/makemore_part1_bigrams.ipynb
+++ b/lectures/makemore/makemore_part1_bigrams.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,8 +85,9 @@
     "\n",
     "  return xs, ys, stoi, itos, num\n",
     "\n",
-    "def get_probs_layer(xenc, W) :\n",
-    "  logits = xenc @ W # predict log-counts\n",
+    "def get_probs_layer(xenc, W):\n",
+    "  # logits = xenc @ W # predict log-counts\n",
+    "  logits = W[torch.where(xenc == 1)[1]] # predict log-counts\n",
     "  counts = logits.exp() # counts, equivalent to N\n",
     "  probs = counts / counts.sum(1, keepdims=True) # probabilities for next character\n",
     "  return probs\n",
@@ -2932,6 +2933,94 @@
     "axes.set_title('Bigram Dev Loss vs. Regularization')\n",
     "axes.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### E04"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of examples:  182594\n",
+      "number of examples:  41046\n",
+      "number of examples:  4506\n",
+      "Training bigram.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loss: 100%|██████████| 100/100 [00:08<00:00, 11.23it/s, epoch=99, loss=2.4743]\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = open('names.txt', 'r').read().splitlines()\n",
+    "np.random.seed(0)\n",
+    "words_train = []\n",
+    "words_dev = []\n",
+    "words_test = []\n",
+    "for word in words:\n",
+    "    if np.random.rand() < 0.8:\n",
+    "        words_train.append(word)\n",
+    "    elif np.random.rand() < 0.9:\n",
+    "        words_dev.append(word)\n",
+    "    else:\n",
+    "        words_test.append(word)\n",
+    "\n",
+    "# Create datasets\n",
+    "xs_train_b, ys_train_b, stoi_train, itos_train, num_train_b = get_dataset_and_network_bigrams(words_train)\n",
+    "xs_dev_b, ys_dev_b, stoi_dev, itos_dev, num_dev_b = get_dataset_and_network_bigrams(words_dev)\n",
+    "xs_test_b, ys_test_b, stoi_test, itos_test, num_test_b = get_dataset_and_network_bigrams(words_test)\n",
+    "\n",
+    "# Train\n",
+    "loss = {'bigram': {'train': {}, 'dev': {}, 'test': {}}}\n",
+    "print('Training bigram.')\n",
+    "W_b, W_1_b, loss_train_b = gradient_descent(xs_train_b, ys_train_b, num_train_b, reg=0)\n",
+    "\n",
+    "ys_train_pred_b = predict(xs_train_b, W_b, None)\n",
+    "ys_dev_pred_b = predict(xs_dev_b, W_b, None)\n",
+    "ys_test_pred_b = predict(xs_test_b, W_b, None)\n",
+    "\n",
+    "loss_train_b = get_loss(ys_train_pred_b, ys_train_b, num_train_b)\n",
+    "loss_dev_b = get_loss(ys_dev_pred_b, ys_dev_b, num_dev_b)\n",
+    "loss_test_b = get_loss(ys_test_pred_b, ys_test_b, num_test_b)\n",
+    "loss['bigram']['train'][float(reg)] = loss_train_b.item()\n",
+    "loss['bigram']['dev'][float(reg)] = loss_dev_b.item()\n",
+    "loss['bigram']['test'][float(reg)] = loss_test_b.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bigram': {'train': {0.0: 2.474043846130371},\n",
+       "  'dev': {0.0: 2.468738317489624},\n",
+       "  'test': {0.0: 2.457929849624634}}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss"
    ]
   }
  ],
