--- a/lectures/makemore/makemore_part1_bigrams.ipynb
+++ b/lectures/makemore/makemore_part1_bigrams.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "\n",
     "def get_probs_layer(xenc, W):\n",
     "  # logits = xenc @ W # predict log-counts\n",
-    "  logits = W[torch.where(xenc == 1)[1]] # predict log-counts\n",
+    "  logits = W[xenc] # predict log-counts\n",
     "  counts = logits.exp() # counts, equivalent to N\n",
     "  probs = counts / counts.sum(1, keepdims=True) # probabilities for next character\n",
     "  return probs\n",
@@ -103,8 +103,9 @@
     "      xenc = torch.cat((F.one_hot(xs[:, 0], num_classes=27).float(),\n",
     "                        F.one_hot(xs[:, 1], num_classes=27).float()), dim=1)\n",
     "    else:\n",
-    "      xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding\n",
-    "    probs = get_probs(xenc, W, W1)  \n",
+    "      # xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding\n",
+    "      pass\n",
+    "    probs = get_probs(xs, W, W1)  \n",
     "    return probs\n",
     "\n",
     "def get_loss(probs, ys, num):\n",
@@ -2944,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2961,7 +2962,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loss: 100%|██████████| 100/100 [00:08<00:00, 11.23it/s, epoch=99, loss=2.4743]\n"
+      "loss: 100%|██████████| 100/100 [00:07<00:00, 13.85it/s, epoch=99, loss=2.4743]\n"
      ]
     }
    ],
@@ -3003,7 +3004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3011,10 +3012,10 @@
       "text/plain": [
        "{'bigram': {'train': {0.0: 2.474043846130371},\n",
        "  'dev': {0.0: 2.468738317489624},\n",
-       "  'test': {0.0: 2.457929849624634}}}"
+       "  'test': {0.0: 2.4579296112060547}}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
