--- a/lectures/makemore/makemore_part1_bigrams.ipynb
+++ b/lectures/makemore/makemore_part1_bigrams.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,8 @@
     "    return probs\n",
     "\n",
     "def get_loss(probs, ys, num):\n",
-    "  return -probs[torch.arange(num), ys].log().mean()\n",
+    "  # return -probs[torch.arange(num), ys].log().mean()\n",
+    "  return F.cross_entropy(probs.log(), ys)\n",
     "\n",
     "def gradient_descent(xs, ys, num, reg=0.01):\n",
     "  # initialize the 'network'\n",
@@ -2940,12 +2941,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### E04"
+    "#### E04, E05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2962,7 +2963,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loss: 100%|██████████| 100/100 [00:07<00:00, 13.85it/s, epoch=99, loss=2.4743]\n"
+      "loss: 100%|██████████| 100/100 [00:08<00:00, 11.23it/s, epoch=99, loss=2.4743]\n"
      ]
     }
    ],
@@ -2997,25 +2998,25 @@
     "loss_train_b = get_loss(ys_train_pred_b, ys_train_b, num_train_b)\n",
     "loss_dev_b = get_loss(ys_dev_pred_b, ys_dev_b, num_dev_b)\n",
     "loss_test_b = get_loss(ys_test_pred_b, ys_test_b, num_test_b)\n",
-    "loss['bigram']['train'][float(reg)] = loss_train_b.item()\n",
-    "loss['bigram']['dev'][float(reg)] = loss_dev_b.item()\n",
-    "loss['bigram']['test'][float(reg)] = loss_test_b.item()"
+    "loss['bigram']['train'][0] = loss_train_b.item()\n",
+    "loss['bigram']['dev'][0] = loss_dev_b.item()\n",
+    "loss['bigram']['test'][0] = loss_test_b.item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bigram': {'train': {0.0: 2.474043846130371},\n",
-       "  'dev': {0.0: 2.468738317489624},\n",
-       "  'test': {0.0: 2.4579296112060547}}}"
+       "{'bigram': {'train': {0: 2.474043846130371},\n",
+       "  'dev': {0: 2.468738317489624},\n",
+       "  'test': {0: 2.457929849624634}}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
