Using functions for training and evaluating loss.

--- a/lectures/makemore/makemore_part2_mlp.ipynb
+++ b/lectures/makemore/makemore_part2_mlp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,71 @@
     "import torch.nn.functional as F\n",
     "import matplotlib.pyplot as plt # for making figures\n",
     "from tqdm import tqdm\n",
+    "import math\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(Xtr, Ytr) -> tuple:\n",
+    "  g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
+    "  C = torch.randn((27, 10), generator=g)\n",
+    "  W1 = torch.randn((30, 200), generator=g)\n",
+    "  b1 = torch.randn(200, generator=g)\n",
+    "  W2 = torch.randn((200, 27), generator=g)\n",
+    "  b2 = torch.randn(27, generator=g)\n",
+    "  parameters = [C, W1, b1, W2, b2]\n",
+    "  for p in parameters:\n",
+    "    p.requires_grad = True\n",
+    "\n",
+    "  for i in tqdm(range(200000)):\n",
+    "    \n",
+    "    # minibatch construct\n",
+    "    ix = torch.randint(0, Xtr.shape[0], (32,))\n",
+    "    \n",
+    "    # forward pass\n",
+    "    emb = C[Xtr[ix]] # (32, 3, 10)\n",
+    "    h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 200)\n",
+    "    logits = h @ W2 + b2 # (32, 27)\n",
+    "    loss = F.cross_entropy(logits, Ytr[ix])\n",
+    "    # tqdm.write(f\"{loss=:.4f}\")\n",
+    "    \n",
+    "    # backward pass\n",
+    "    for p in parameters:\n",
+    "      p.grad = None\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    # update\n",
+    "    #lr = lrs[i]\n",
+    "    lr = 0.1 if i < 100000 else 0.01\n",
+    "    for p in parameters:\n",
+    "      p.data += -lr * p.grad\n",
+    "\n",
+    "    # track stats\n",
+    "    #lri.append(lre[i])\n",
+    "    # stepi.append(i)\n",
+    "    # lossi.append(loss.log10().item())\n",
+    "\n",
+    "  print(loss.item())\n",
+    "  return C, W1, b1, W2, b2\n",
+    "\n",
+    "def eval_loss(Xtr, Ytr, C, W1, b1, W2, b2):\n",
+    "  emb = C[Xtr] # (32, 3, 2)\n",
+    "  h = torch.tanh(emb.view(-1, math.prod(emb.shape[1:])) @ W1 + b1) # (32, 100)\n",
+    "  logits = h @ W2 + b2 # (32, 27)\n",
+    "  loss = F.cross_entropy(logits, Ytr)\n",
+    "  return loss.item()"
    ]
   },
   {
@@ -408,21 +472,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
-    "C = torch.randn((27, 10), generator=g)\n",
-    "W1 = torch.randn((30, 200), generator=g)\n",
-    "b1 = torch.randn(200, generator=g)\n",
-    "W2 = torch.randn((200, 27), generator=g)\n",
-    "b2 = torch.randn(27, generator=g)\n",
-    "parameters = [C, W1, b1, W2, b2]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -439,16 +488,6 @@
    ],
    "source": [
     "sum(p.nelement() for p in parameters) # number of parameters in total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for p in parameters:\n",
-    "  p.requires_grad = True"
    ]
   },
   {
@@ -470,51 +509,6 @@
     "lri = []\n",
     "lossi = []\n",
     "stepi = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 200000/200000 [02:54<00:00, 1144.62it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in tqdm(range(200000)):\n",
-    "  \n",
-    "  # minibatch construct\n",
-    "  ix = torch.randint(0, Xtr.shape[0], (32,))\n",
-    "  \n",
-    "  # forward pass\n",
-    "  emb = C[Xtr[ix]] # (32, 3, 10)\n",
-    "  h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 200)\n",
-    "  logits = h @ W2 + b2 # (32, 27)\n",
-    "  loss = F.cross_entropy(logits, Ytr[ix])\n",
-    "  #print(loss.item())\n",
-    "  \n",
-    "  # backward pass\n",
-    "  for p in parameters:\n",
-    "    p.grad = None\n",
-    "  loss.backward()\n",
-    "  \n",
-    "  # update\n",
-    "  #lr = lrs[i]\n",
-    "  lr = 0.1 if i < 100000 else 0.01\n",
-    "  for p in parameters:\n",
-    "    p.data += -lr * p.grad\n",
-    "\n",
-    "  # track stats\n",
-    "  #lri.append(lre[i])\n",
-    "  stepi.append(i)\n",
-    "  lossi.append(loss.log10().item())\n",
-    "\n",
-    "#print(loss.item())"
    ]
   },
   {
@@ -548,51 +542,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(2.0804, grad_fn=<NllLossBackward0>)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "emb = C[Xtr] # (32, 3, 2)\n",
-    "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)\n",
-    "logits = h @ W2 + b2 # (32, 27)\n",
-    "loss = F.cross_entropy(logits, Ytr)\n",
-    "loss"
+    "### Train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C, W1, b1, W2, b2 = train(Xtr, Ytr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(2.1355, grad_fn=<NllLossBackward0>)"
+       "2.131497383117676"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emb = C[Xdev] # (32, 3, 2)\n",
-    "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)\n",
-    "logits = h @ W2 + b2 # (32, 27)\n",
-    "loss = F.cross_entropy(logits, Ydev)\n",
-    "loss"
+    "eval_loss(Xtr, Ytr, C, W1, b1, W2, b2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.172429084777832"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_loss(Xdev, Ydev, C, W1, b1, W2, b2)"
    ]
   },
   {
